# cmake_stm32

./: CMakeLists.txt  arm-none-eabi-gcc.cmake
.github/workflows/: codescan.yml
BSP/: .mxproject  BSP.ioc  Makefile
BSP/Src/: main.c
